Fix values spacing on desktop

--- a/website/src/app/views/about/About.css
+++ b/website/src/app/views/about/About.css
@@ -109,6 +109,10 @@
   margin: auto;
 }
 
+.values-row-2 .value-container {
+  margin: auto 65px;
+}
+
 .value-info {
   width: 100%;
 }
